--- a/App/templates/pages/book_detail.html
+++ b/App/templates/pages/book_detail.html
@@ -24,7 +24,7 @@
                     <button type="submit" class="btn-carrito">Añadir al carrito</button>
                 </form>
             {% else %}
-                <a class="nav-link" href="{% url 'modificar_book' book_id=book.book_id %}">Modificar</a>
+                <a class="btn-carrito" href="{% url 'modificar_book' book_id=book.book_id %}">Modificar</a>
             {% endif %}
             {% else %}
                 <form action="{% url 'add_to_cart' book.book_id %}" method="post">
